Replace png format with webp format for images.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/Xuesong.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/Xuesong_circle.png" class="hoverZoomLink"></a>
+              <a href="images/Xuesong.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/Xuesong_circle.webp" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -64,7 +64,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/phoenix_domain_circle.png' width="160">
+                <img src='images/phoenix_domain_circle.webp' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
