--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p style="text-align:center">
                 <name>Xuesong Bai | 白雪松</name>
               </p>
-              <p>I am a Master's student in <a href="https://engineering.uci.edu/dept/eecs">Department of Electrical Engineering and Computer Science</a> at University of California, Irvine.
+              <p>I am currently a first-year Ph.D. student in <a href="https://engineering.uci.edu/dept/eecs">Department of Electrical Engineering and Computer Science</a> at University of California, Irvine.
               </p>
               <p>
                 I received my B.S. in Electrical Engineering in 2020 from <a href="https://www.uc.edu/">University of Cincinnati</a> and Chongqing University.
