Add "Recent News" and "Services" section.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Recent News</heading>
+            <ul>
+              <li><b>[02/2023]</b>, Our paper <i>Ghost Domain Reloaded</i> will be presented at NDSS 2023, see you in San Diego!</li>
+              <li><b>[11/2022]</b>, Attended ACM CCS 2022, really enjoyed the experience.</li>
+            </ul>
+          </td>
+        </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
@@ -96,7 +107,20 @@
             </td>
 
         </tbody></table>
-
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Services</heading>
+            <ul>
+              <li>Artifact Evaluation Committee:
+                <ul>
+                  <li><b>EuroSys '23 </b>, Artifact Evaluation Committee (AEC)</li>
+                </ul>
+              </li>
+            </ul>
+          </td>
+        </tr>
+        </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
