Replace the email address with encoded one.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 I received my B.S. in Electrical Engineering in 2020 from <a href="https://www.uc.edu/">University of Cincinnati</a> and Chongqing University.
               </p>
               <p style="text-align:center">
-                <a href="mailto:xuesong.bai@uci.edu">Email</a> &nbsp/&nbsp
+                <a href="echo eHVlc29uZy5iYWlAdWNpLmVkdQ== | base64 -d">Email</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?hl=en&user=z3ff77EAAAAJ">Google Scholar</a> &nbsp/&nbsp
