Added one paper and reformated.

--- a/index.html
+++ b/index.html
@@ -1,159 +1,223 @@
 <!DOCTYPE HTML>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FBCYHVMV2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-1FBCYHVMV2');
-  </script>  
+  </script>
 
   <title>Xuesong BAI | 白雪松</title>
-  
+
   <meta name="author" content="Xuesong Bai">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="./favicon.svg">
+  <link rel="icon" href="./favicon.svg">
 </head>
 
 <body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-    <tr style="padding:0px">
-      <td style="padding:0px">
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr style="padding:0px">
-            <td style="padding:2.5%;width:63%;vertical-align:middle">
-              <p style="text-align:center">
-                <name>Xuesong Bai | 白雪松</name>
-              </p>
-              <p>I am currently a first-year Ph.D. student in <a href="https://engineering.uci.edu/dept/eecs">Department of Electrical Engineering and Computer Science</a> at University of California, Irvine.
-              </p>
-              <p>
-                I received my B.S. in Electrical Engineering in 2020 from <a href="https://www.uc.edu/">University of Cincinnati</a> and Chongqing University.
-              </p>
-              <p style="text-align:center">
-                <a href="mailto:xuesong.bai@uci.edu">Email</a> &nbsp/&nbsp
-                <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
+  <table
+    style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <tbody>
+      <tr style="padding:0px">
+        <td style="padding:0px">
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr style="padding:0px">
+                <td style="padding:2.5%;width:63%;vertical-align:middle">
+                  <p style="text-align:center">
+                    <name>Xuesong Bai | 白雪松</name>
+                  </p>
+                  <p>I am currently a first-year Ph.D. student in <a
+                      href="https://engineering.uci.edu/dept/eecs">Department of Electrical Engineering and Computer
+                      Science</a> at University of California, Irvine.
+                  </p>
+                  <p>
+                    I received my B.S. in Electrical Engineering in 2020 from <a href="https://www.uc.edu/">University
+                      of Cincinnati</a> and Chongqing University.
+                  </p>
+                  <p style="text-align:center">
+                    <a href="mailto:xuesong.bai@uci.edu">Email</a> &nbsp/&nbsp
+                    <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
-                <a href="https://scholar.google.com/citations?hl=en&user=z3ff77EAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp -->
-                <a href="https://www.linkedin.com/in/xuesong-bai/">LinkedIn</a> &nbsp/&nbsp
-                <a href="https://www.researchgate.net/profile/Xuesong-Bai-5">ResearchGate</a> &nbsp/&nbsp
-                <a href="https://github.com/mrbaixg/">GitHub</a>
-              </p>
-            </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/Xuesong.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/Xuesong_circle.webp" class="hoverZoomLink"></a>
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Recent News</heading>
-            <ul>
-              <li><b>[02/2023]</b>, Our paper <i>Ghost Domain Reloaded</i> will be presented at NDSS 2023, see you in San Diego!</li>
-              <li><b>[11/2022]</b>, Attended ACM CCS 2022, really enjoyed the experience.</li>
-            </ul>
-          </td>
-        </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Research</heading>
-              <p>
-                I'm interested in Compter security, including network architecture and protocol design, security and privacy with machine learning.
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/phoenix_domain_circle.webp' width="160">
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://phoenixdomain.net/">
-                <papertitle>Ghost Domain Reloaded: Vulnerable Links in Domain Name Delegation and Revocation</papertitle>
-              </a>
-              <br>
-              <a href="https://netsec.ccert.edu.cn/people/lx19">Xiang Li</a>,
-              <a href="https://netsec.ccert.edu.cn/people/lbj20">Baojun Liu</a>,
-              <strong>Xuesong Bai</strong>,
-							<a href="https://netsec.ccert.edu.cn/people/zmm18">Mingming Zhang</a>,
-              <a href="https://faculty.sites.uci.edu/zhouli/research/">Qifan Zhang</a>,
-              <a href="https://faculty.sites.uci.edu/zhouli/">Zhou Li</a>,
-              <a href="https://netsec.ccert.edu.cn/people/duanhx/">Haixin Duan</a>,
-              <a href="https://netsec.ccert.edu.cn/people/qli/">Qi Li</a>,
-              <a href="https://netsec.ccert.edu.cn/people/duanhx/">Haixin Duan</a>
-              <br>
-              <em>NDSS</em>, 2023
-              <br>
-              <a href="https://phoenixdomain.net/">project page</a>
-              <!-- /
+                    <a href="https://scholar.google.com/citations?hl=en&user=z3ff77EAAAAJ">Google Scholar</a>
+                    &nbsp/&nbsp
+                    <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp -->
+                    <a href="https://www.linkedin.com/in/xuesong-bai/">LinkedIn</a> &nbsp/&nbsp
+                    <a href="https://www.researchgate.net/profile/Xuesong-Bai-5">ResearchGate</a> &nbsp/&nbsp
+                    <a href="https://github.com/xuesong-bai">GitHub</a>
+                  </p>
+                </td>
+                <td style="padding:2.5%;width:40%;max-width:40%">
+                  <a href="images/Xuesong.png"><img style="width:100%;max-width:100%" alt="profile photo"
+                      src="images/Xuesong_circle.webp" class="hoverZoomLink"></a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Recent News</heading>
+                  <ul>
+                    <li><b>[08/2023]</b>, One paper got accepted by USENIX Security '24. Congrats! Qifan!</li>
+                    <li><b>[02/2023]</b>, Our paper <i>Ghost Domain Reloaded</i> was presented at NDSS 2023, see you
+                      in San Diego!</li>
+                    <li><b>[11/2022]</b>, Attended ACM CCS 2022, really enjoyed the experience.</li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Research</heading>
+                  <p>
+                    I'm interested in Compter security, including network architecture and protocol design, security and
+                    privacy with machine learning.
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <img src='images/phoenix_domain_circle.webp' width="160">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://phoenixdomain.net/">
+                  <papertitle>Ghost Domain Reloaded: Vulnerable Links in Domain Name Delegation and Revocation
+                  </papertitle>
+                </a>
+                <br>
+                <a href="https://netsec.ccert.edu.cn/people/lx19">Xiang Li</a>,
+                <a href="https://netsec.ccert.edu.cn/people/lbj20">Baojun Liu</a>,
+                <strong>Xuesong Bai</strong>,
+                <a href="https://netsec.ccert.edu.cn/people/zmm18">Mingming Zhang</a>,
+                <a href="https://faculty.sites.uci.edu/zhouli/research/">Qifan Zhang</a>,
+                <a href="https://faculty.sites.uci.edu/zhouli/">Zhou Li</a>,
+                <a href="https://netsec.ccert.edu.cn/people/duanhx/">Haixin Duan</a>,
+                <a href="https://netsec.ccert.edu.cn/people/qli/">Qi Li</a>,
+                <a href="https://netsec.ccert.edu.cn/people/duanhx/">Haixin Duan</a>
+                <br>
+                <em>NDSS</em>, 2023
+                <br>
+                <a href="https://phoenixdomain.net/">project page</a>
+                <!-- /
               <a href="https://arxiv.org/abs/2209.14988">arXiv</a>
               /
               <a href="https://dreamfusion3d.github.io/gallery.html">gallery</a> -->
-              <p></p>
-              <!-- <p>
+                <p></p>
+                <!-- <p>
               We optimize a NeRF from scratch using a pretrained text-to-image diffusion model to do text-to-3D generative modeling.
               </p> -->
-            </td>
+              </td>
 
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Services</heading>
-            <ul>
-              <li>Artifact Evaluation Committee:
-                <ul>
-                  <li><b>EuroSys '23 </b>, Artifact Evaluation Committee (AEC)</li>
-                </ul>
-              </li>
-            </ul>
-          </td>
-        </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Teaching</heading>
-            <ul>
-              <li>Assistantship@UC Irvine:
-                <ul>
-                  <li><b>CompSci 132: Computer Networks</b>, Grader</li>
-                </ul>
-              </li>
-            </ul>
-            <ul>
-              <li>Assistantship@U of Cincinnati:
-                <ul>
-                  <li><b>ENED 3061: PROB STATS I</b>, Teaching Assistant</li>
-                </ul>
-              </li>
-            </ul>
-          </td>
-        </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:0px">
-              <br>
-              <p style="text-align:right;font-size:small;">
-                Forked template from <a href="http://jonbarron.info">Jon Barron</a>'s
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-      </td>
-    </tr>
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <img src='' width="160">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <papertitle>ResolverFuzz: Automated Discovery of DNS Resolver Vulnerabilities with Query-Response
+                    Fuzzing</papertitle>
+                </a>
+                <br>
+                <a href="https://qifanz.com/">Qifan Zhang</a>,
+                <strong>Xuesong Bai</strong>,
+                <a href="https://lixiang521.com/">Xiang Li</a>,
+                <a href="https://netsec.ccert.edu.cn/people/duanhx/">Haixin Duan</a>,
+                <a href="https://netsec.ccert.edu.cn/people/qli/">Qi Li</a>,
+                <a href="https://faculty.sites.uci.edu/zhouli/">Zhou Li</a>
+                <br>
+                <em>USENIX Security</em>, 2024
+                <br>
+                <!-- <a href="https://phoenixdomain.net/">project page</a> -->
+              </td>
+
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Services</heading>
+                  <ul>
+                    <li>Artifact Evaluation Committee (AEC):
+                      <ul>
+                        <li><b>NDSS '24</b>: Summer, Fall</li>
+                        <li><b>EuroSys '23</b>: Fall</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Teaching</heading>
+                  <ul>
+                    <li>Assistantship@UC Irvine:
+                      <ul>
+                        <li><b>CompSci 132: Computer Networks</b>, Grader</li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>Assistantship@U of Cincinnati:
+                      <ul>
+                        <li><b>ENED 3061: PROB STATS I</b>, Teaching Assistant</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:0px">
+                  <br>
+                  <p style="text-align:right;font-size:small;">
+                    Forked template from <a href="http://jonbarron.info">Jon Barron</a>'s
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
   </table>
 </body>
 
