Updated Email address to avoid bot.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       of Cincinnati</a> and Chongqing University.
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:xuesong.bai@uci.edu">Email</a> &nbsp/&nbsp
+                    <a href="mailto:xuesong[DOT]bai[AT]uci[DOT]edu">Email</a> &nbsp/&nbsp
                     <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                     <a href="https://scholar.google.com/citations?hl=en&user=z3ff77EAAAAJ">Google Scholar</a>
