Updated content in the webpage.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <p style="text-align:center">
                     <name>Xuesong Bai | 白雪松</name>
                   </p>
-                  <p>I am currently a first-year Ph.D. student in <a
+                  <p>I am currently a second-year Ph.D. student in <a
                       href="https://engineering.uci.edu/dept/eecs">Department of Electrical Engineering and Computer
                       Science</a> at University of California, Irvine.
                   </p>
@@ -71,6 +71,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Recent News</heading>
                   <ul>
+                    <li><b>[02/2024]</b>, I received Henry Samueli Endowed Fellowship from School of Engineering, UCI. Thanks a lot!</li>
                     <li><b>[08/2023]</b>, One paper got accepted by USENIX Security '24. Congrats! Qifan!</li>
                     <li><b>[02/2023]</b>, Our paper <i>Ghost Domain Reloaded</i> was presented at NDSS 2023, see you
                       in San Diego!</li>
@@ -99,11 +100,39 @@
             <tbody>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
+                  <img src='' width="160">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://www.usenix.org/conference/usenixsecurity24/presentation/zhang-qifan">
+                  <papertitle>ResolverFuzz: Automated Discovery of DNS Resolver Vulnerabilities with Query-Response
+                    Fuzzing</papertitle>
+                </a>
+                <br>
+                <a href="https://qifanz.com/">Qifan Zhang</a>,
+                <strong>Xuesong Bai</strong>,
+                <a href="https://lixiang521.com/">Xiang Li</a>,
+                <a href="https://netsec.ccert.edu.cn/people/duanhx/">Haixin Duan</a>,
+                <a href="https://netsec.ccert.edu.cn/people/qli/">Qi Li</a>,
+                <a href="https://faculty.sites.uci.edu/zhouli/">Zhou Li</a>
+                <br>
+                <em>USENIX Security</em>, 2024
+                <br>
+                <!-- <a href="https://phoenixdomain.net/">project page</a> -->
+              </td>
+
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
                   <img src='images/phoenix_domain_circle.webp' width="160">
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://phoenixdomain.net/">
+                <a href="https://www.ndss-symposium.org/ndss-paper/ghost-domain-reloaded-vulnerable-links-in-domain-name-delegation-and-revocation/">
                   <papertitle>Ghost Domain Reloaded: Vulnerable Links in Domain Name Delegation and Revocation
                   </papertitle>
                 </a>
@@ -136,29 +165,14 @@
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-                  <img src='' width="160">
-                </div>
-              </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="">
-                  <papertitle>ResolverFuzz: Automated Discovery of DNS Resolver Vulnerabilities with Query-Response
-                    Fuzzing</papertitle>
-                </a>
-                <br>
-                <a href="https://qifanz.com/">Qifan Zhang</a>,
-                <strong>Xuesong Bai</strong>,
-                <a href="https://lixiang521.com/">Xiang Li</a>,
-                <a href="https://netsec.ccert.edu.cn/people/duanhx/">Haixin Duan</a>,
-                <a href="https://netsec.ccert.edu.cn/people/qli/">Qi Li</a>,
-                <a href="https://faculty.sites.uci.edu/zhouli/">Zhou Li</a>
-                <br>
-                <em>USENIX Security</em>, 2024
-                <br>
-                <!-- <a href="https://phoenixdomain.net/">project page</a> -->
-              </td>
-
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Awards</heading>
+                  <ul>
+                    <li>2024.02 Henry Samueli Endowed Fellowship</li>
+                  </ul>
+                </td>
+              </tr>
             </tbody>
           </table>
           <table
@@ -168,10 +182,32 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Services</heading>
                   <ul>
+                    <li>External Reviewer:
+                      <ul>
+                        <li>
+                          <b>Journal</b>
+                            <ul>
+                              <li>Computer Networks</li>
+                              <li>Peer-to-Peer Networking and Applications</li>
+                            </ul>
+                        </li>
+                        <li>
+                          <b>Conference</b>
+                            <ul>
+                              <li><b> S&P</b>: 2025</li>
+                              <li><b>NDSS</b>: 2025, 2024</li>
+                            </ul>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <ul>
                     <li>Artifact Evaluation Committee (AEC):
                       <ul>
-                        <li><b>NDSS '24</b>: Summer, Fall</li>
-                        <li><b>EuroSys '23</b>: Fall</li>
+                        <li><b>ACM CCS</b>: 2024</li>
+                        <li><b>USENIX Security</b>: 2024</li>
+                        <li><b>NDSS</b>: 2025, 2024</li>
+                        <li><b>EuroSys</b>: 2023 Fall</li>
                       </ul>
                     </li>
                   </ul>
