--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:xuesong[DOT]bai[AT]uci[DOT]edu">Email</a> &nbsp/&nbsp
-                    <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
+                    <a href="data/Xuesong-CV.pdf">CV</a> &nbsp/&nbsp
+                <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                     <a href="https://scholar.google.com/citations?hl=en&user=z3ff77EAAAAJ">Google Scholar</a>
                     &nbsp/&nbsp
                     <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp -->
